[gd_scene load_steps=7 format=2]

[ext_resource path="res://time.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GeostarFill-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://turns.gd" type="Script" id=3]
[ext_resource path="res://score.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="Interface" type="CanvasLayer"]

[node name="Parent" type="Node" parent="."]

[node name="Time" type="Control" parent="Parent"]
margin_left = 360.0
margin_right = 400.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TimeCount" type="Label" parent="Parent/Time"]
margin_left = 1128.0
margin_top = 40.0
margin_right = 1380.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TIME: "

[node name="Turns" type="Control" parent="Parent"]
margin_left = 360.0
margin_right = 400.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="TurnCount" type="Label" parent="Parent/Turns"]
margin_left = 216.0
margin_top = 36.0
margin_right = 708.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TURNS LEFT: "

[node name="Score" type="Control" parent="Parent"]
margin_left = 360.0
margin_right = 400.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="ScoreCount" type="Label" parent="Parent/Score"]
margin_left = -168.0
margin_top = 40.0
margin_right = 84.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE: "

[node name="STextTimer" type="Timer" parent="Parent/Score"]
one_shot = true

[node name="Timer" type="Timer" parent="Parent"]
process_mode = 0
autostart = true
[connection signal="timeout" from="Parent/Score/STextTimer" to="Parent/Score" method="_on_STextTimer_timeout"]
[connection signal="timeout" from="Parent/Timer" to="Parent/Time" method="_on_Timer_timeout"]
